# discussion-sentinel-bot

./: .dockerignore  .editorconfig  .flake8  .isort.cfg  Dockerfile  Makefile  README.md  bot.py  dev-requirements.in  dev-requirements.txt  docker-compose.yml  filters.py  helpers.py  models.py  mypy.ini  pyproject.toml  rekognition.py  requirements.in  requirements.txt  text.py
.github/workflows/: ci.yml
tests/: conftest.py
tests/tests_filters/: conftest.py  test_chat_message_only.py  test_cointains_three_or_more_emojis.py  test_contains_link.py  test_contains_tg_contact.py  test_has_no_valid_previous_messages.py  test_is_media.py  test_is_message_behalf_of_chat.py  test_is_newfag.py
